--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,9 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+settings.py
+requirements.txt
+__init__.py
 
 # Flask stuff:
 instance/
@@ -106,6 +109,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+myenv/
 ENV/
 env.bak/
 venv.bak/
